--- a/style.css
+++ b/style.css
@@ -5,7 +5,31 @@
 }
 
 body {
-    oadding: 0;
+    padding: 0;
     margin: 0;
     background: linear-gradient(to right, blue, orange);
+}
+
+.calculator-grid {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+
+}
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: outline;
+    background-color: rgba(255, 255, 255, .75);
+}
+
+.calculator-grid > button:hover {
+    background-color: rgba(255, 255, 255, .9);
+}
+.span-two {
+    grid-column: span 2;
 }
