linked index to javascript, added basic framework for buttons to be linked in calculator javascript

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     flex-direction: column;
     padding: 10px;
     word-wrap: break-word;
-    word-brea: break-all;
+    word-break: break-all;
 }
 
 .output .previous-operand {
